deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: personal-site
spec:
  selector:
    app: personal-site
  ports:
    - name: http
      port: 80
      targetPort: http
