deploy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: personal-site
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: gateway-system
      sectionName: https-apex
  hostnames:
    - andrewis2431.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=31536000; includeSubDomains
              - name: X-Content-Type-Options
                value: nosniff
              - name: Referrer-Policy
                value: strict-origin-when-cross-origin
              - name: X-Frame-Options
                value: DENY
      backendRefs:
        - name: personal-site
          port: 80
